# api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  rustfmt.toml  test_api.sh
migrations/: 001_init.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/controllers/: auth.rs
src/application/repositories/: user.rs
src/application/services/: auth.rs  mod.rs  telegram.rs
src/auth/: jwt.rs  mod.rs  telegram.rs
src/config/: mod.rs
src/domain/dto/: common.rs  error.rs  mod.rs  telegram.rs
src/domain/entities/: mod.rs  user.rs
src/domain/repositories/: user.rs
src/domain/services/: telegram.rs
src/handlers/: auth.rs  files.rs  health.rs  mod.rs  users.rs
src/models/: user.rs
src/utils/: errors.rs
