[package]
name = "telegramify-api"
version = "0.1.0"
edition = "2021"
description = "A RESTful API with PostgreSQL, Redis, and Telegram authentication"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp"] }

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication and security
jsonwebtoken = "9.2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

# OpenAPI/Swagger
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# HTTP client for Telegram API
reqwest = { version = "0.11", features = ["json"] }

# Environment and configuration
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID and time
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# File handling
mime = "0.3"
