[package]
name = "telegramify-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
dotenv = "0.15.0"
listenfd = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
telegram-auth-rs = "0.1.1"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["cache", "axum"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
